syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/empty.proto";
import "myUuid.proto";
package kpi.trspo.restapp;

message ManagerGrpc {
  MyUuid id = 1;
  string name = 2;
  string surname = 3;
  string phone = 4;
}

message GetManagersRequest {
  google.protobuf.Empty value = 1;
}

message GetManagersResponse {
  repeated ManagerGrpc managers = 1;
}

message CreateManagerRequest {
  string name = 1;
  string surname = 2;
  string phone = 3;
}

message CreateManagerResponse {
  ManagerGrpc manager = 1;
}

service GetManagersService {
  rpc getManagers(GetManagersRequest) returns (GetManagersResponse);
}

service CreateManagerService {
  rpc createManager(CreateManagerRequest) returns (CreateManagerResponse);
}